--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -32,6 +32,9 @@
          <pointsize>14</pointsize>
         </font>
        </property>
+       <property name="lineWrapMode">
+        <enum>QTextEdit::NoWrap</enum>
+       </property>
        <property name="readOnly">
         <bool>true</bool>
        </property>
